Add menu for adding categories Remove redundant data adapter class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="help_action">HELP</string>
     <string name="play_action">Play</string>
     <string name="card_action">Learn</string>
+    <string name="add_category_action">Add Category</string>
 
 </resources>
