--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_level_two">LevelTwo</string>
+    <string name="title_activity_custom_draw_practice">CustomDrawPractice</string>
 
 
 </resources>
