--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="save_action">Save</string>
     <string name="play_action">Play</string>
     <string name="card_action">Learn</string>
+    <string name="practice_action">Practice</string>
     <string name="add_category_action">Add Category</string>
 
     <string name="title_activity_puzzle_menu_page">PuzzleMenuPage</string>
@@ -55,6 +56,9 @@
     <string name="level_four">Level Four</string>
     <string name="level_five">Level Five</string>
     <string name="title_activity_custom_draw_practice">CustomDrawPractice</string>
+
+    <string name="category_error">Unable to save</string>
+    <string name="category_success">Added successfully!</string>
 
 
 </resources>
